;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                Diana Kalinichenko, Jane Street, New York               *
;*                                                                        *
;*   Copyright 2024 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(library
 (name stdlib_stable)
 (public_name ocaml.stdlib_stable)
 (modes byte native)
 (flags
  (:standard
   -strict-sequence
   -absname
   -bin-annot
   -safe-string
   -strict-formats
   -extension-universe
   stable))
 (ocamlopt_flags
  (:include %{project_root}/ocamlopt_flags.sexp))
 (library_flags
  (:standard -linkall)))

(rule
 (targets
  float32_common.ml
  float32_common.mli
  float32_u_common.ml
  float32_u_common.mli)
 (deps
  shared/float32_common.ml
  shared/float32_common.mli
  shared/float32_u_common.ml
  shared/float32_u_common.mli)
 (action
  (progn
   (copy shared/float32_common.ml float32_common.ml)
   (copy shared/float32_common.mli float32_common.mli)
   (copy shared/float32_u_common.ml float32_u_common.ml)
   (copy shared/float32_u_common.mli float32_u_common.mli))))

(rule
 (targets
  float32.ml
  float32.mli
  float32_u.ml
  float32_u.mli
  stdlib_stable.ml
  stdlib_stable.mli)
 (deps
  amd64/float32.ml
  amd64/float32.mli
  amd64/float32_u.ml
  amd64/float32_u.mli
  amd64/stdlib_stable.ml
  amd64/stdlib_stable.mli)
 (enabled_if
  (= %{architecture} "amd64"))
 (action
  (progn
   (copy amd64/float32.ml float32.ml)
   (copy amd64/float32.mli float32.mli)
   (copy amd64/float32_u.ml float32_u.ml)
   (copy amd64/float32_u.mli float32_u.mli)
   (copy amd64/stdlib_stable.ml stdlib_stable.ml)
   (copy amd64/stdlib_stable.mli stdlib_stable.mli))))

(rule
 (targets
  float32.ml
  float32.mli
  float32_u.ml
  float32_u.mli
  stdlib_stable.ml
  stdlib_stable.mli)
 (deps
  arm64/float32.ml
  arm64/float32.mli
  arm64/float32_u.ml
  arm64/float32_u.mli
  arm64/stdlib_stable.ml
  arm64/stdlib_stable.mli)
 (enabled_if
  (= %{architecture} "arm64"))
 (action
  (progn
   (copy arm64/float32.ml float32.ml)
   (copy arm64/float32.mli float32.mli)
   (copy arm64/float32_u.ml float32_u.ml)
   (copy arm64/float32_u.mli float32_u.mli)
   (copy arm64/stdlib_stable.ml stdlib_stable.ml)
   (copy arm64/stdlib_stable.mli stdlib_stable.mli))))

(rule
 (targets stdlib_stable.ml stdlib_stable.mli)
 (deps generic/stdlib_stable.ml generic/stdlib_stable.mli)
 (enabled_if
  (and
   (<> %{architecture} "amd64")
   (<> %{architecture} "arm64")))
 (action
  (progn
   (copy generic/stdlib_stable.ml stdlib_stable.ml)
   (copy generic/stdlib_stable.mli stdlib_stable.mli))))

(rule
 (deps
  (:first-dep ../to_install.sh)
  (source_tree .))
 (action
  (with-stdout-to
   to_install.sexp
   (run "%{first-dep}" "stdlib_stable"))))
